# servidor_impressao_rust

./: .env  Cargo.toml  README.md
src/: config.rs  main.rs  utils.rs
src/models/: mod.rs
src/routes/: auth.rs  mod.rs  print.rs
src/services/: printer.rs
